# PlaNet-RSSM-

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: dataset.ipynb  env.ipynb  pixels-cheetah.ipynb  state.ipynb  test-gym.ipynb  test.ipynb  walker.py
planet/: collector.py  loss.py  trainer.py
planet/dataset/: buffer.py  env_objects.py
planet/models/: action.py  determinstic_state.py  encoder.py  observation.py  reward.py  stochastic_state.py  utils.py
planet/planning/: action.py  planner.py
planet/utils/: env.py  envs.py  image.py  sample.py  seed.py  vis.py  wrappers.py
scripts/: dm_control_train.py  tester.py  trainer.py
scripts/configs/dm_control/: cartpole-balance.yaml  cheetah-run.yaml  walker-walk.yaml  walker_walk.yaml
scripts/configs/gym/: half-cheetah.yaml  halfcheetah.yaml
