[tool.poetry]
name = "planet"
version = "0.1.0"
description = ""
authors = ["RobertSamoilescu <robert.samoilescu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
pydantic = "^2.8.2"
numpy = "1.26.3"
tqdm = "^4.66.4"
dm-control = "^1.0.22"
opencv-python = "^4.10.0.84"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
exclude = '''
(
  \.egg-info
  | \.mypy_cache
  | \.git
  | \.tox
)
'''

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
exclude = [
  '\.egg-info',
  '\.mypy_cache',
  '\.git',
  '\.tox',
]


[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
flake8-black = "0.3.6"
mypy = "1.10.0"
mypy-protobuf = "3.1.0"
black = "24.4.0"